@@ -1,3 +1,9 @@
+2004-07-10  Muktha  <muktha.narayan@wipro.com>
+
+	* dialogs/gedit-close-confirmation-dialog.c 
+	(gedit_close_confirmation_dialog_init): Set accessible name for
+	the confirmation dialog. Fixes #144863.
+
 2004-06-26  Muktha  <muktha.narayan@wipro.com>
 
 	* dialogs/gedit-page-setup-dialog.c (dialog_response_handler):
